# secret-santa-service

./: Cargo.toml  hello.html  satna.html  ТЗ.md
backend/: Cargo.toml
backend/src/: user_group.rs
src/: lib.rs  main  main.rs  user_group.rs
