[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "*", features = ["rt-multi-thread", "macros"]}
tide = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "1.0"